# xensiv-pas-gas-sensor

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  xensiv_pas_gas.c  xensiv_pas_gas.h  xensiv_pas_gas_co2.c  xensiv_pas_gas_co2.h  xensiv_pas_gas_co2_regs.h  xensiv_pas_gas_platform.c  xensiv_pas_gas_platform.h  xensiv_pas_gas_r290.c  xensiv_pas_gas_r290.h  xensiv_pas_gas_r290_regs.h  xensiv_pas_gas_regs.h
.github/workflows/: Build.yml  code_formatting.yml  codespell.yml  commit_formatting.yml
src/: xensiv_pas_gas.c  xensiv_pas_gas.h  xensiv_pas_gas_a2l.c  xensiv_pas_gas_a2l.h  xensiv_pas_gas_a2l_regs.h  xensiv_pas_gas_co2.h  xensiv_pas_gas_co2_regs.h  xensiv_pas_gas_platform.c  xensiv_pas_gas_platform.h  xensiv_pas_gas_r290.h  xensiv_pas_gas_r290_regs.h  xensiv_pas_gas_regs.h
tools/: ci.sh  codeformat.py  uncrustify.cfg  verifygitlog.py
